# publications

./: README.md  Zygo analyzer
.obsidian/: workspace.json
JackieMarangoniFlow/: 8601B.py  barrierWorkup.py  main.py  pyproject.toml  supportingFunctions.py
JackieSharkSkin/: main.py  pyproject.toml
JackieSharkSkin/forFigures/: main.py  pyproject.toml  segmentationRecoloring.py  xyz_to_blender_mesh.py
JackieSharkSkin/forFigures/__marimo__/session/: segmentationRecoloring.py.json
JackieSharkSkin/foulingImages/: lengthTrends.py  main.py  percent_uncovered.py  pyproject.toml  time_progression.py
JackieSharkSkin/foulingImages/__marimo__/session/: lengthTrends.py.json  percent_uncovered.py.json  time_progression.py.json
JackieSharkSkin/profilometry/: exampleWorkup.py  main.py  pyproject.toml
JackieSharkSkin/profilometry/analysis/: flatBarnacle.py  flatBarnacle1.py  flatPostpy.py  flatPre.py  largePatternsBarnacle.py  largePatternsPost.py  largePatternsPre.py  pyproject.toml  smallPatternsBarnacle.py  smallPatternsPost.py  smallPatternsPre.py  supportingFunctions.py
JackieSharkSkin/profilometry/layouts/: exampleWorkup.grid.json
Kristen Variability/: 20240325_125158009_240325_PdSC12tol_6K_0dB_wide SIZES.csv  20240325_125158009_240325_PdSC12tol_6K_0dB_wide.csv  CESR fiting.py  Feret_All_PdSC12.csv  PdSC12_tol_10K.csv  fitting_writeup.md
KristenPulse/: Figure 1.af  Figure 1.af~lock~  ILT_fitting.py  LearKristenPulse.py  binned high density stuff.csv  couplingSimulator.py  dueterationExperiments.py  main.py  mimsFunctions.py  mimsWithDipolar.py  pyproject.toml  (+4 more)
(+47 files in other folders)
