[project]
name = "jackiesharkskin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "codechembook>=1.3.0",
    "lmfit>=1.3.4",
    "marimo>=0.21.1",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
